--- a/src/index.css
+++ b/src/index.css
@@ -99,11 +99,40 @@ button:hover {
   border-radius: 10px;
   cursor: pointer;
   transition: transform 0.3s;
+  perspective: 1000px; /* Creates the 3D effect */
 }
 
-.card.flipped {
-  color: black;
+.card-inner {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: transform 0.6s ease-in-out;
 }
+
+.card.flipped .card-inner {
+    transform: rotateY(180deg);
+    transition: transform 0.25s ease-in-out; 
+}
+
+.card-front,
+.card-back {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    backface-visibility: hidden; 
+}
+
+.card-front {
+    transform: rotateY(180deg); 
+}
+
+.card-back {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 
 .leaderboard-container {
   height: 70vh;
@@ -228,4 +257,15 @@ button:hover {
     opacity: 0.8;
     font-size: 15px;
     letter-spacing: 0.5px;
+}
+
+
+.loading-screen {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background: black;
+    color: white;
+    font-size: 24px;
 }
